[package]
name = "fantom-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
url = "2.2.2"
serde_json = "1.0.68"
anyhow = "1.0.45"
reqwest = "0.11.6"
coingecko-rs = "0.1.5"
